# ENGR1510J_21FA

./: README.md
lab0/: header.tex  l0.tex
lab1/: code_with_comments.m  rectangle_draw.m
lab2/: lab2.m  mymagicodd.m  print_matrix.m
lab3/: DFS.m  PlateGeneration.m  lab3.m  map_read.m
lab5/: README.md  calculator.c  calculator.h  compile.sh  main.c
lab6/: README.md  l6_code.tar  l6_input.txt  main.c  sims.c  sims.h
lab7/: CMakeLists.txt  Makefile  README.md  main.c  tree.c  tree.h
lab9/: compile.sh  main.cpp
mid2/: Makefile  binary_search  display.sh  linear_search  main.c  selection_sort
